--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Rasa&display=swap");
 * {
   margin: 0;
@@ -698,21 +699,8 @@ label input[type=radio]:checked + .nav-servant-ico {
   }
 }
 @media (max-width: 600px) {
-  #nav-burger {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 5px 10px;
-    z-index: 10;
-    background: white;
-    -webkit-box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.5);
-            box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.5);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+  #nav-title {
     font-size: 2em;
-    font-weight: 900;
-    color: #03458f;
   }
   #nav-container {
     padding: 0 5px;
@@ -738,6 +726,34 @@ label input[type=radio]:checked + .nav-servant-ico {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-transition: left 0.5s;
+    transition: left 0.5s;
+    -webkit-transition-timing-function: ease-in-out;
+            transition-timing-function: ease-in-out;
+  }
+  #nav-menu-1::after {
+    content: "▼ Select a Class ▼";
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    position: absolute;
+    top: 40%;
+    right: -112px;
+    margin: 0;
+    padding: 5px 20px;
+    z-index: -1;
+    background: white;
+    -webkit-box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-weight: bold;
+    color: #03458f;
   }
   #nav-menu-2 {
     display: grid;
