--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -20,23 +20,26 @@
 
 @media (max-width: 600px) {
   #nav {
-    &-burger {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 5px 10px;
-      z-index: 10;
-      // Box
-      background: white;
-      box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-      // Text
+    &-title {
       font-size: 2em;
-      font-weight: 900;
-      color: $bgcolor_blue1;
     }
+    // &-burger {
+    //   display: block;
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   padding: 5px 10px;
+    //   z-index: 10;
+    //   // Box
+    //   background: white;
+    //   box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
+    //   border-top-right-radius: 10px;
+    //   border-bottom-right-radius: 10px;
+    //   // Text
+    //   font-size: 2em;
+    //   font-weight: 900;
+    //   color: $bgcolor_blue1;
+    // }
     &-container {
       padding: 0 5px;
     }
@@ -71,24 +74,30 @@
         row-gap: 1px;
         column-gap: 10px;
         justify-content: center;
-        // &::after {
-        //   content: "▼";
-        //   display: flex;
-        //   align-items: flex-end;
-        //   position: absolute;
-        //   top: 40px;
-        //   right: -51px;
-        //   margin: 0;
-        //   padding: 10px 20px;
-        //   z-index: -1;
-        //   background: white;
-        //   box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
-        //   transform: rotate(270deg);
-        //   border-bottom-left-radius: 10px;
-        //   border-bottom-right-radius: 10px;
-        //   font-weight: bold;
-        //   color: $bgcolor_blue1;
+
+        transition: left 0.5s;
+        transition-timing-function: ease-in-out;
+        // &:hover {
+        //   left: 0;
         // }
+        &::after {
+          content: "▼ Select a Class ▼";
+          display: flex;
+          align-items: flex-end;
+          position: absolute;
+          top: 40%;
+          right: -112px;
+          margin: 0;
+          padding: 5px 20px;
+          z-index: -1;
+          background: white;
+          box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
+          transform: rotate(270deg);
+          border-bottom-left-radius: 10px;
+          border-bottom-right-radius: 10px;
+          font-weight: bold;
+          color: $bgcolor_blue1;
+        }
       }
       &-2 {
         @include gridCenterCol(2, 1fr);
