--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ body {
   cursor: pointer;
 }
 .button-X p {
+  text-align: center;
   color: #03458f;
   font-size: 1.5em;
   -webkit-transform: rotate(-45deg);
@@ -785,7 +786,6 @@ label input[type=radio]:checked + .nav-servant-ico {
   .modals-wrapper-2 {
     height: 80vh;
     width: 90vw;
-    overflow-y: scroll;
   }
   .modals-separator {
     display: none;
