--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,6 +19,7 @@ body {
     @include flexCenter;
     cursor: pointer;
     p {
+      text-align: center;
       color: $bgcolor_blue1;
       font-size: 1.5em;
       transform: rotate(-45deg);
